Fix tooltip z-index.

--- a/assets/css/header.less
+++ b/assets/css/header.less
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  z-index: 200;
+  z-index: 2;
   background: @background-solid;
   padding-top: 0.7rem;
 
@@ -134,7 +134,7 @@
   .header {
     position: sticky;
     top: 0;
-    z-index: 200;
+    z-index: 2;
     transform-style: preserve-3d;
 
     .header-menu-toggle {
@@ -225,7 +225,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 100;
+  z-index: 1;
   display: none;
   background: rgba(200, 200, 200, 0.8);
 }
